@@ -25,7 +25,7 @@ dependencies {
 }
 
 javafx {
-    version = '26-ea+23'
+    version = '27-ea+1'
     modules = ['javafx.controls', 'javafx.fxml']
     configurations = ['implementation']
 }
@@ -40,6 +40,10 @@ tasks.withType(Test).configureEach {
 
 tasks.withType(JavaExec).configureEach {
     jvmArgs('--enable-native-access=ALL-UNNAMED')
+}
+
+tasks.named('run') {
+    jvmArgs = ["--enable-native-access=javafx.graphics"]
 }
 
 application {
